--- a/_posts/2015-05-11-Pedagogy.markdown
+++ b/_posts/2015-05-11-Pedagogy.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-image: memorySmall.jpg
+image: stringSmall.jpg
 category: Services
 title: General pedagogy resources
 description: |
